--- a/kafka-custom-object-consumer/src/main/resources/application.properties
+++ b/kafka-custom-object-consumer/src/main/resources/application.properties
@@ -2,3 +2,6 @@
 kafka.bootstrap.servers=127.0.0.1:9092
 order.topic=order-event
 group.id=payment-grp
+
+logging.level.com.manjosh.practice.kafka.consumer.*=DEBUG
+logging.level.org.apache.kafka=ERROR
