--- a/kafka-producer-example/src/main/resources/application.yml
+++ b/kafka-producer-example/src/main/resources/application.yml
@@ -3,5 +3,9 @@ server:
 
 spring:
   kafka:
-    producer:
-      bootstrap-servers: localhost:9092
+#    producer:
+#      bootstrap-servers: localhost:9092
+#      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+#      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    admin:
+      auto-create-topics: false
