--- a/kafka-custom-object-consumer/pom.xml
+++ b/kafka-custom-object-consumer/pom.xml
@@ -41,7 +41,13 @@
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.manjosh.practice</groupId>
+            <artifactId>kafka-producer-example</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
